--- a/QRevise_Vocabulary/Sources/Modules/Learning/AddNewWord/AddNewWordViewController.xib
+++ b/QRevise_Vocabulary/Sources/Modules/Learning/AddNewWord/AddNewWordViewController.xib
@@ -10,30 +10,103 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddNewWordViewController" customModule="QRevise_Vocabulary" customModuleProvider="target">
             <connections>
+                <outlet property="avatar" destination="Tgx-uY-kTF" id="DEM-Yd-Tpi"/>
+                <outlet property="collectionView" destination="i8g-Tz-Qua" id="XzQ-fC-Nls"/>
+                <outlet property="infoContainer" destination="oRe-TW-AqT" id="avW-GJ-TnW"/>
+                <outlet property="userInfoContainer" destination="a0E-09-BwB" id="QSm-e1-tVB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOF-dD-9aR">
-                    <rect key="frame" x="118" y="314" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b1A-Mb-Wcb" userLabel="ContainerView">
+                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DEe-Ck-SG5">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="189.66666666666666"/>
+                            <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a0E-09-BwB">
+                            <rect key="frame" x="20" y="69.999999999999986" width="353" height="227.66666666666663"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tgx-uY-kTF">
+                                    <rect key="frame" x="141.66666666666666" y="10" width="70" height="70"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="70" id="LOa-9N-QkP"/>
+                                        <constraint firstAttribute="width" secondItem="Tgx-uY-kTF" secondAttribute="height" multiplier="1:1" id="aIN-uc-ral"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quang Duong" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QcP-f7-P9l">
+                                    <rect key="frame" x="10" y="90" width="333" height="19.333333333333329"/>
+                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oRe-TW-AqT">
+                                    <rect key="frame" x="10" y="129.33333333333331" width="333" height="98.333333333333314"/>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="QcP-f7-P9l" firstAttribute="leading" secondItem="a0E-09-BwB" secondAttribute="leading" constant="10" id="0rg-3i-E2W"/>
+                                <constraint firstItem="Tgx-uY-kTF" firstAttribute="centerX" secondItem="a0E-09-BwB" secondAttribute="centerX" id="2uu-vV-Td5"/>
+                                <constraint firstItem="Tgx-uY-kTF" firstAttribute="top" secondItem="a0E-09-BwB" secondAttribute="top" constant="10" id="4xQ-QK-FI0"/>
+                                <constraint firstAttribute="trailing" secondItem="QcP-f7-P9l" secondAttribute="trailing" constant="10" id="9ap-r1-mMe"/>
+                                <constraint firstItem="oRe-TW-AqT" firstAttribute="leading" secondItem="a0E-09-BwB" secondAttribute="leading" constant="10" id="GQL-5n-bmQ"/>
+                                <constraint firstAttribute="bottom" secondItem="oRe-TW-AqT" secondAttribute="bottom" id="WFk-F5-SXd"/>
+                                <constraint firstItem="QcP-f7-P9l" firstAttribute="top" secondItem="Tgx-uY-kTF" secondAttribute="bottom" constant="10" id="aZ3-qv-aSI"/>
+                                <constraint firstAttribute="trailing" secondItem="oRe-TW-AqT" secondAttribute="trailing" constant="10" id="htN-Vu-6cJ"/>
+                                <constraint firstItem="oRe-TW-AqT" firstAttribute="top" secondItem="QcP-f7-P9l" secondAttribute="bottom" constant="20" id="v4T-rP-Ayg"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="i8g-Tz-Qua">
+                            <rect key="frame" x="10" y="307.66666666666674" width="373" height="441.33333333333326"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7CT-P7-YxV">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="DEe-Ck-SG5" firstAttribute="leading" secondItem="b1A-Mb-Wcb" secondAttribute="leading" id="6EA-B8-Ksc"/>
+                        <constraint firstItem="DEe-Ck-SG5" firstAttribute="top" secondItem="b1A-Mb-Wcb" secondAttribute="top" id="8oQ-H9-y5M"/>
+                        <constraint firstItem="a0E-09-BwB" firstAttribute="leading" secondItem="b1A-Mb-Wcb" secondAttribute="leading" constant="20" id="Ehv-kn-URe"/>
+                        <constraint firstItem="i8g-Tz-Qua" firstAttribute="top" secondItem="a0E-09-BwB" secondAttribute="bottom" constant="10" id="Ph8-rh-UyR"/>
+                        <constraint firstItem="a0E-09-BwB" firstAttribute="top" secondItem="b1A-Mb-Wcb" secondAttribute="top" constant="70" id="RzO-2s-TBl"/>
+                        <constraint firstItem="DEe-Ck-SG5" firstAttribute="height" secondItem="b1A-Mb-Wcb" secondAttribute="height" multiplier="0.25" id="Tq6-Ui-TOx"/>
+                        <constraint firstItem="i8g-Tz-Qua" firstAttribute="leading" secondItem="b1A-Mb-Wcb" secondAttribute="leading" constant="10" id="auq-Ey-0Tx"/>
+                        <constraint firstItem="a0E-09-BwB" firstAttribute="height" secondItem="b1A-Mb-Wcb" secondAttribute="height" multiplier="0.3" id="hxe-Wo-l3l"/>
+                        <constraint firstAttribute="trailing" secondItem="i8g-Tz-Qua" secondAttribute="trailing" constant="10" id="jvW-1l-e4b"/>
+                        <constraint firstAttribute="trailing" secondItem="a0E-09-BwB" secondAttribute="trailing" constant="20" id="lj7-Ac-Aaq"/>
+                        <constraint firstAttribute="trailing" secondItem="DEe-Ck-SG5" secondAttribute="trailing" id="om2-N8-410"/>
+                        <constraint firstAttribute="bottom" secondItem="i8g-Tz-Qua" secondAttribute="bottom" constant="10" id="sJy-6Y-Z9B"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="b1A-Mb-Wcb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7HC-qE-OgN"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="b1A-Mb-Wcb" secondAttribute="bottom" id="RfB-YK-EaI"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="b1A-Mb-Wcb" secondAttribute="trailing" id="Yza-eS-agX"/>
+                <constraint firstItem="b1A-Mb-Wcb" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="svG-Y1-jye"/>
+            </constraints>
             <point key="canvasLocation" x="70" y="21"/>
         </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
